--- a/src/styles/utilities/_utilities.colours.scss
+++ b/src/styles/utilities/_utilities.colours.scss
@@ -25,7 +25,7 @@
     $carbon-shade: darken($carbon-value, $variant);
     [class~="u-carbon-#{$carbon-key}-bg--tint-#{$i}0"] {
       background-color: $carbon-tint;
-      cursor: $carbon-tint; 
+      color: carbon-choose-contrast-color($carbon-value);
     }
     
     [class~="u-carbon-#{$carbon-key}-bg--tint-#{$i}0"]:after {
@@ -34,6 +34,7 @@
     
     [class~="u-carbon-#{$carbon-key}-bg--shade-#{$i}0"] {
       background-color: $carbon-shade; 
+      color: carbon-choose-contrast-color($carbon-value);
     }
     
     [class~="u-carbon-#{$carbon-key}-bg--shade-#{$i}0"]:after {
